Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/RMA__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coverage_Level__c</fullName>
        <label>Coverage Level</label>
        <picklist>
            <controllingField>Covered_by_SLA__c</controllingField>
            <picklistValues>
                <fullName>0-5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Covered_by_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered by SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Replacement_Ship_Date__c</fullName>
        <label>Expected Replacement Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number_Billable_Repairs__c</fullName>
        <label>PO Number (Billable Repairs)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned__c</fullName>
        <label>Quantity Returned</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Description__c</fullName>
        <label>RMA Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMA_Serial_Number__c</fullName>
        <label>RMA Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Status__c</fullName>
        <label>RMA Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disassembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assembly / Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Replacement_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Issued?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replacement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replacement_Serial_Number__c</fullName>
        <label>Replacement Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Ship_To_Address__c</fullName>
        <label>Replacement Ship-To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Facility__c</fullName>
        <label>Return Facility</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Primary_Ship_To_for_Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Primary &quot;Ship To&quot; for Replacement</label>
        <type>Checkbox</type>
    </fields>
    <label>RMA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMA-{MM}{DD}{YY}-{0000}</displayFormat>
        <label>RMA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>